# Galatea-LiveKit

./: main.py  model_media.csv  models.csv  pyproject.toml  requirements.txt  test_keys.py  text_utils.py
agent_template/: Chrystèle.json  Dex.json  Dong-Sook.json  InvestorPitch.json  Léa.json  Wei.json
engineering_notebook/: 01-setup-environment.md  02-project-requirements.md  03-design-decisions.md  04-experimentation-results.md  05-issues-resolutions.md  06-next-steps.md
galatea_livekit/: __main__.py
galatea_livekit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
galatea_livekit/agent/: rime_agent.py
galatea_livekit/agent/tools/: __init__.py  bucket_tools.py  history_tools.py  message_tools.py
galatea_livekit/bus/: events.py  queue.py
galatea_livekit/channels/: cli.py  telegram.py
galatea_livekit/config/: manager.py
galatea_livekit/providers/: __init__.py  anthropic.py  base.py  elevenlabs.py  tracker.py
galatea_livekit/session/: history.py
galatea_livekit/utils/: bucket.py  paths.py
galatea_livekit/workspace/: RULES.md
galateabot/agent/: loop.py  rime_agent.py
galateabot/agent/tools/: bucket_tools.py  fs_tools.py  history_tools.py  inflection_tool.py  message_tools.py
galateabot/bus/: queue.py
galateabot/channels/: cli.py  telegram.py  voice.py
galateabot/config/: config.json  manager.py
galateabot/providers/: anthropic.py  elevenlabs.py  google.py  manager.py  openai.py
galateabot/session/: history.py  manager.py
galateabot/utils/: bucket.py  cache.py  paths.py
galateabot/workspace/: PERSONALITY.md  SOUL.md
(+19 files in other folders)
